--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-/* Amir Khan */
+/* Saroj Chaudhary*/
 
 * {
 	box-sizing: border-box;
 	border: 200px;
 	background-color:azure;
 	position: relative;
+	margin:10%;
 }
 
 .column {
 	float: left;
-	width: 15%;
-	padding: 20px;
+	width: 10%;
+	padding: 10px;
 	margin-left: 25px;
 	margin-top: 10px;
 }
